--- a/latest/Dockerfile.amd64
+++ b/latest/Dockerfile.amd64
@@ -15,3 +15,7 @@ RUN apk update && \
   rm -rf /var/cache/apk/*
 
 COPY ./overlay /
+
+RUN find /etc/container.d /etc/entrypoint.d -type f -name \*.sh -exec sed -i 's/\r$//' {} +; \
+  sed -i 's/\r$//' /usr/bin/healthcheck /usr/bin/container && \
+  chmod +x /usr/bin/healthcheck /usr/bin/container /etc/container.d/*.sh /etc/entrypoint.d/*.sh
